--- a/client/templates/cart.html
+++ b/client/templates/cart.html
@@ -5,7 +5,15 @@
   <meta charset="utf-8" />
   <title>BariFoods - Cart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="../static/img/logo.ico" type="image/x-icon">
+  
+  <link rel="icon" href="/static/img/logo.png" type="image/png">
+  <!-- Google Search / Android -->
+  <link rel="icon" type="image/png" sizes="192x192" href="../static/img/logo.png">
+  <!-- Smaller fallback -->
+  <link rel="icon" type="image/png" sizes="32x32" href="../static/img/logo.png">
+  <!-- Apple devices -->
+  <link rel="apple-touch-icon" href="../static/img/logo.png">
+
   <link rel="stylesheet" href="../static/css/product.css" />
   <link rel="stylesheet" href="../static/css/cart.css" />
 
