--- a/client/templates/checkout.html
+++ b/client/templates/checkout.html
@@ -5,7 +5,15 @@
   <meta charset="utf-8" />
   <title>BariFoods - Checkout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="../static/img/logo.ico" type="image/x-icon">
+  
+  <link rel="icon" href="/static/img/logo.png" type="image/png">
+  <!-- Google Search / Android -->
+  <link rel="icon" type="image/png" sizes="192x192" href="../static/img/logo.png">
+  <!-- Smaller fallback -->
+  <link rel="icon" type="image/png" sizes="32x32" href="../static/img/logo.png">
+  <!-- Apple devices -->
+  <link rel="apple-touch-icon" href="../static/img/logo.png">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
