--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -5,7 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bari Foods - Authentic Rajasthani Snacks</title>
-  <link rel="icon" href="../static/img/logo.ico" type="image/x-icon">
+
+  <link rel="icon" href="/static/img/logo.png" type="image/png">
+  <!-- Google Search / Android -->
+  <link rel="icon" type="image/png" sizes="192x192" href="../static/img/logo.png">
+  <!-- Smaller fallback -->
+  <link rel="icon" type="image/png" sizes="32x32" href="../static/img/logo.png">
+  <!-- Apple devices -->
+  <link rel="apple-touch-icon" href="../static/img/logo.png">
+
   <link rel="stylesheet" href="../static/css/style.css">
   <link rel="stylesheet" href="../static/css/auth-popup.css">
   <link
