--- a/client/templates/policies.html
+++ b/client/templates/policies.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Policies - Bari Foods</title>
-  <link rel="icon" href="../static/img/logo.ico" type="image/x-icon">
+
+  <link rel="icon" href="/static/img/logo.png" type="image/png">
+  <!-- Google Search / Android -->
+  <link rel="icon" type="image/png" sizes="192x192" href="../static/img/logo.png">
+  <!-- Smaller fallback -->
+  <link rel="icon" type="image/png" sizes="32x32" href="../static/img/logo.png">
+  <!-- Apple devices -->
+  <link rel="apple-touch-icon" href="../static/img/logo.png">
+
   <link rel="stylesheet" href="../static/css/style.css">
   <link rel="stylesheet" href="../static/css/policies.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700;800&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
