--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -5,7 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Account Management - Profile</title>
-  <link rel="icon" href="../static/img/logo.ico" type="image/x-icon">
+  
+  <link rel="icon" href="/static/img/logo.png" type="image/png">
+  <!-- Google Search / Android -->
+  <link rel="icon" type="image/png" sizes="192x192" href="../static/img/logo.png">
+  <!-- Smaller fallback -->
+  <link rel="icon" type="image/png" sizes="32x32" href="../static/img/logo.png">
+  <!-- Apple devices -->
+  <link rel="apple-touch-icon" href="../static/img/logo.png">
+
   <link rel="stylesheet" href="../static/css/profile.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link
