--- a/client/templates/checkout.html
+++ b/client/templates/checkout.html
@@ -44,7 +44,7 @@
         <details class="block" open>
           <summary class="block-head" role="button" aria-expanded="true">
             <span class="block-title">Select a delivery address</span>
-            <span aria-hidden="true">›</span>
+            <span aria-hidden="true">&gt;</span>
           </summary>
           <div class="block-body">
             <div class="address-count">Delivery addresses (<span id="addressCount">0</span>)</div>
@@ -67,7 +67,7 @@
         <details class="block" open>
           <summary class="block-head" role="button" aria-expanded="true">
             <span class="block-title">Payment Method</span>
-            <span aria-hidden="true">›</span>
+            <span aria-hidden="true">&gt;</span>
           </summary>
           <div class="block-body">
             <div class="pay-list" id="payList" role="radiogroup" aria-describedby="payment-title">
@@ -118,7 +118,7 @@
         <details class="block" open>
           <summary class="block-head" role="button" aria-expanded="true">
             <span class="block-title">Review Your Order</span>
-            <span aria-hidden="true">›</span>
+            <span aria-hidden="true">&gt;</span>
           </summary>
           <div class="block-body">
             <ul id="reviewList" class="review-list"></ul>
@@ -158,7 +158,7 @@
           </button>
 
           <p class="tiny" id="order-terms">
-            Secure checkout • By placing this order, you agree to our
+            Secure checkout &bull; By placing this order, you agree to our
             <a href="/terms" style="color: var(--gold); text-decoration: none;">Terms & Conditions</a>
           </p>
 
