--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -87,7 +87,7 @@
         <div class="modal" role="document">
           <header class="modal-header">
             <div class="crumbs" id="modalCrumbs">Products &gt; All &gt; <span id="crumbName"></span></div>
-            <button class="close" id="modalClose" aria-label="Close">✕</button>
+            <button class="close" id="modalClose" aria-label="Close">&#10005;</button>
           </header>
 
           <div class="modal-body">
